# sphinxcontrib-umlet

./: .gitignore  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: workflow.yml
sphinxcontrib/umlet/: __init__.py
tests/: conftest.py  test_caching.py  test_compat.py  test_options.py  test_paths.py  test_pdf.py  test_update.py
tests/roots/test-align/: index.rst
tests/roots/test-alt/: index.rst
tests/roots/test-bad-config/: conf.py
tests/roots/test-bad-config2/: conf.py
tests/roots/test-figure/: conf.py  index.rst
tests/roots/test-image/: Usecase.uxf  index.rst
tests/roots/test-imgconverter/: conf.py
tests/roots/test-paths/: index.rst
tests/roots/test-reference/: index.rst
tests/roots/test-scale/: SimpleClass.uxf  conf.py  index.rst
tests/roots/test-warnings/: conf.py  index.rst
tests/roots/test-width-height/: index.rst
