[metadata]
name = sphinxcontrib-umlet
version = attr: sphinxcontrib.umlet.__version__
author = Alexander Mann-Wahrenberg (basejumpa)
author_email = alexander.mannwahrenberg@gmail.com
description = Sphinx Extension to embed UMLet diagrams
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/basejumpa/sphinxcontrib-umlet
license = MIT
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Sphinx :: Extension

[options]
packages = sphinxcontrib.umlet
include_package_data = true
python_requires = >=3.7
install_requires =
    sphinx>=2
